[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/OptioningLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/OptioningTextInput.gd" type="Script" id=2]
[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/fonts/Baked/UbuntuMono-NF.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/OptioningButton.tscn" type="PackedScene" id=4]

[node name="OptioningTextInput" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 128.0
alignment = 2
script = ExtResource( 2 )

[node name="Label" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 195.0
margin_bottom = 128.0
size_flags_vertical = 7
text = "Option Name"
align = 1
valign = 1

[node name="ResetButton" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
margin_left = 199.0
margin_right = 243.0
margin_bottom = 128.0
text = "ï•­"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 247.0
margin_right = 1920.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "*"
align = 2
max_length = 1

[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
